--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,7 @@
     <title>PixelPunch</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--ssr-outlet--></div>
     <script type="module" src="./src/app/index.tsx"></script>
   </body>
 </html>
