--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,6 +7,7 @@
     <title>PixelPunch</title>
   </head>
   <body>
+    <!--ssr-initial-state-->
     <div id="root"><!--ssr-outlet--></div>
     <script type="module" src="./src/app/index.tsx"></script>
   </body>
